2012-01-25  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync with English documentation.

2012-01-22  Tag Release_4_6_rc1

2012-01-17  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* configure.in src/Makefile.am src/qtterminal/Makefile.am
	src/qtterminal/QtGnuplotApplication.cpp
	src/qtterminal/QtGnuplotApplication.h src/qtterminal/QtGnuplotEvent.cpp
	src/qtterminal/QtGnuplotEvent.h src/qtterminal/gnuplot_qt.cpp
	src/qtterminal/qt_term.cpp term/qt.trm: The Qt terminal application is
	executed in a separate executable called gnuplot_qt, started by exec.
	This makes the Qt terminal compatible with OS X.

2012-01-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds):  Store the canvas size used by
	the previous plot in user accessible variables GPVAL_TERM_XSIZE,
	GPVAL_TERM_YSIZE.

2012-01-15  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* src/mouse.c (event_buttonpress): Treat mouse buttons 6/7 as
	left/right scroll events (e.g. from fingers on a touchpad).

	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):  Pass
	horizontal scroll events through to gnuplot core as mouse events 6/7.

2011-01-15 Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.mgw: Sync with configure.

2011-01-14  Bastian Maerkisch  <bmaerkisch@web.de>

	Installer for Windows. Japanese translation by Shigeharu Takeno.

	* win/gnuplot.iss win/modpath.iss: Installer script to be compiled by
	Inno Setup. New files.

	* win/Copyright-ja.txt: Japanese translation of Copyright, includes
	original text. Encoding is Shift-JIS.

	* win/README-Windows.txt win/README-Windows-ja.txt: New files, 
	displayed by installer before installation. Based on Tatsuro Matsuoka's
	README.Windows.gpteam and README.

	* config/mingw/Makefile: New make target 'installer'.

	* Makefile.am (EXTRA_DIST): Include win/

2011-01-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* tutorial/linepoin.plt: Avoid deprecated syntax.
